--- a/www/templates/account/myorder.html
+++ b/www/templates/account/myorder.html
@@ -30,14 +30,14 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
           <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale stable-bg">
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
           <ion-item class="item-divider light-bg text-right item-borderless">
@@ -58,7 +58,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
 
@@ -86,7 +86,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
 
@@ -108,7 +108,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
 
@@ -136,7 +136,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
 
