--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,5 +1,6 @@
 <ion-view hide-nav-bar="true">
-  <ion-content overflow-scroll="false" class="stable-bg no-nav-header" has-bouncing="true"  delegate-handle="main-content">
+  <ion-content overflow-scroll="false" class="stable-bg no-nav-header" has-bouncing="true"
+               delegate-handle="main-content">
     <div class="row text-center  light row-center " id="main-search">
       <span class="col-15 nowrap">{{cityName}} <i class="icon ion-arrow-down-b"></i></span>
       <input type="text" class="col-75" placeholder="  请输入关键字"/>
@@ -8,7 +9,8 @@
     <ion-slide-box show-pager="true" does-continue="true" auto-play="true" slide-interval="3000"
                    delegate-handle="slideboximgs" id="main-slide">
       <ion-slide ng-repeat="item in banner">
-        <img ng-click="windowOpen(item.link)" ng-src="{{item.image}}" ng-href="" alt="{{item.name}}" class="full-image"/>
+        <img ng-click="windowOpen(item.link)" ng-src="{{item.image}}" ng-href="" alt="{{item.name}}"
+             class="full-image"/>
       </ion-slide>
 
     </ion-slide-box>
@@ -43,41 +45,42 @@
     <p></p>
     <ion-list>
       <ion-item class="text-center"><strong>热卖产品</strong></ion-item>
-      <a ng-href="#/productdetails" nav-direction=forward  class="item item-thumbnail-left main-hot-sale">
+      <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/cp@2.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75 energized"><strong >￥49.</strong><span>00</span></span> <i
+        <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span>00</span></span> <i
           class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
       <ion-item>
-        <ion-scroll ng-style="{width:scrollWidth}" delegate-handle="main-scroll"  direction="x" zooming="true" overflow-scroll="false"  scrollbar-x="false" has-bouncing="true" class="main-scroll">
-          <div  ng-style="{width:scrollContentWidth}" id="main-scroll">
-            <a ng-href="#/productdetails" nav-direction=forward >
+        <ion-scroll ng-style="{width:scrollWidth}" delegate-handle="main-scroll" direction="x" zooming="true"
+                    overflow-scroll="false" scrollbar-x="false" has-bouncing="true" class="main-scroll">
+          <div ng-style="{width:scrollContentWidth}" id="main-scroll">
+            <a ng-href="#/productdetails" nav-direction=forward>
               <img ng-src="img/main/cp@3.jpg" class="full-image" alt=""/>
               <p class="text-wrap">宓驰婴儿推车超轻便可做可躺折叠</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
-            <a ng-href="#/productdetails" nav-direction=forward >
+            <a ng-href="#/productdetails" nav-direction=forward>
               <img ng-src="img/main/cp@1.jpg" class="full-image" alt="">
               <p class="text-wrap">爱得利奶瓶宽口径婴儿奶瓶带吸管手</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
-            <a ng-href="#/productdetails" nav-direction=forward >
+            <a ng-href="#/productdetails" nav-direction=forward>
               <img ng-src="img/main/toys.png" class="full-image" alt="">
               <p class="text-wrap">Little Tikes美国小太克儿童玩具</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
-            <a ng-href="#/productdetails" nav-direction=forward >
+            <a ng-href="#/productdetails" nav-direction=forward>
               <img ng-src="img/main/cp@5.jpg" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col iconfont icon-gouwuche positive text-right"></i></p>
             </a>
-            <a ng-href="#/productdetails" nav-direction=forward >
+            <a ng-href="#/productdetails" nav-direction=forward>
               <img ng-src="img/main/cp@5.jpg" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
@@ -95,21 +98,21 @@
         <img ng-src="img/main/cp@3.jpg" alt="">
         <h2>都市型婴儿四轮推车遮阳车</h2>
         <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-        <p class="row row-center"><span class="col-75 energized"><strong>￥49.</strong><span>00</span></span> <i
+        <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span>00</span></span> <i
           class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
       <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/cp@1.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75 energized"><strong >￥49.</strong><span>00</span></span> <i
+        <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span>00</span></span> <i
           class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
       <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/cp@5.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75 energized"><strong >￥49.</strong><span>00</span></span> <i
+        <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span>00</span></span> <i
           class="col iconfont icon-gouwuche positive text-right"></i></p>
       </a>
     </ion-list>
