--- a/www/templates/main/productlist.html
+++ b/www/templates/main/productlist.html
@@ -30,7 +30,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -38,7 +38,7 @@
             <img ng-src="img/main/cp@1.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -46,7 +46,7 @@
             <img ng-src="img/main/cp@5.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -54,7 +54,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -62,7 +62,7 @@
             <img ng-src="img/main/cp@1.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -70,7 +70,7 @@
             <img ng-src="img/main/cp@5.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -87,7 +87,7 @@
             <img ng-src="img/main/cp@1.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -95,7 +95,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -104,7 +104,7 @@
             <img ng-src="img/main/cp@5.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -113,7 +113,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -130,7 +130,7 @@
             <img ng-src="img/main/cp@5.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -139,7 +139,7 @@
             <img ng-src="img/main/cp@1.jpg" alt="">
             <h2>婴幼儿配方奶粉3段</h2>
             <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
@@ -147,7 +147,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
-            <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <i
               class="col iconfont icon-gouwuche positive text-right"></i></p>
           </a>
