--- a/www/templates/main/revieworder.html
+++ b/www/templates/main/revieworder.html
@@ -26,14 +26,14 @@
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails" nav-direction=forward>
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span
+        <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
           class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
       </ion-item>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails" nav-direction=forward>
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥98.</strong><span
+        <p class="row row-center"><span class="col-75 energized">￥<strong >98.</strong><span
           class="energized">00</span></span> <span class="item-note">数量 : 2件</span></p>
       </ion-item>
     </ion-list>
