--- a/www/templates/account/organizingdata.html
+++ b/www/templates/account/organizingdata.html
@@ -9,7 +9,12 @@
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" id="organizingdata">
     <form name="organizingdata">
       <ion-list>
-        <label class="item item-input ">
+        <a ui-sref="uploadhead({figure:userinfo.figure})"  class="item item-avatar item-icon-right  item-borderless">
+          <img ng-src="img/head.jpg" class="border-radius-50" alt="" onerror="this.src='img/head.jpg'">
+          <p class="padding-top">头像</p>
+          <i class="icon ion-ios-arrow-right grey"></i>
+        </a>
+          <label class="item item-input ">
           <span class="input-label"> 姓名 </span>
           <input type="text" ng-model="userinfo.username" placeholder="请输入姓名" required>
         </label>
@@ -17,7 +22,7 @@
           <span class="input-label"> 宝宝姓名 </span>
           <input type="text" ng-model="userinfo.baousername" placeholder="请输入宝宝姓名">
         </label>
-        <div class="item ">
+        <div class="item">
           <div class="row row-no-padding row-center radio">
             <span class="input-label col-30"> 性别 </span>
             <label class="col-25"><input type="radio" name="sex" value="1"/> <i class=" icon ion-disc"></i> 男生</label>
