--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -22,11 +22,11 @@
 
           <h2>{{item.title}}</h2>
           <p class="text-wrap">{{item.description}}</p>
-          <p class="row row-center"><span class="col-65"><strong
-            class="energized">￥{{item.price.split('.')[0] }}.</strong><span
+          <p class="row row-center"><span class="col-60 energized">￥<strong
+            >{{item.price.split('.')[0] }}.</strong><span
             class="energized">{{item.price.split('.')[1]}}</span></span>
             <i class="col icon ion-ios-minus-outline grey text-right" ng-click="minus($index)"></i>
-            <input type="number" min="1"  class="col text-right" ng-model="item.num"/>
+            <input type="number"  class="col text-right " ng-model="item.num"/>
             <i class="col icon ion-ios-plus-outline grey text-right" ng-click="add($index)"></i></p>
           <label class="checkbox">
             <input type="checkbox" ng-checked="false" ng-model="item.checked">
@@ -43,9 +43,9 @@
         <span class="padding-left">全选</span>
 
       </label>
-      <span class="col text-center">合计 : <strong
+      <span class="col text-center">合计 :<strong
         class="assertive">{{shoppingcar.totalPrice |currency:'￥'}}</strong></span>
-      <button ui-sref="revieworder" class="col button  button-assertive"><strong>去结算</strong> <i ng-if="shoppingcar.totalnum!=0">({{shoppingcar.totalnum}})</i></button>
+      <button ui-sref="revieworder" ng-disabled="shoppingcar.totalnum==0" class="col button  button-assertive"><strong>结算</strong> <i >( {{shoppingcar.totalnum}} )</i></button>
     </div>
   </ion-footer-bar>
 </ion-view>
