元亨祥母婴商城

--- a/www/templates/main/revieworder.html
+++ b/www/templates/main/revieworder.html
@@ -26,22 +26,22 @@
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails" nav-direction=forward>
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
+        <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
           class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
       </ion-item>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
         <img ng-src="img/main/1.png" alt="" ui-sref="productdetails" nav-direction=forward>
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75 energized">￥<strong >98.</strong><span
+        <p class="row row-center"><span class="col-75 energized">￥<strong>98.</strong><span
           class="energized">00</span></span> <span class="item-note">数量 : 2件</span></p>
       </ion-item>
     </ion-list>
   </ion-content>
   <ion-footer-bar class="shoppingcart-footer-bar">
     <div class="row row-no-padding row-center  ">
-      <span class="col-60 padding-left">总金额 : <strong class="assertive">￥360.00</strong></span>
-      <button ui-sref="myorder" class="col button  button-assertive"><strong>提交订单</strong> </button>
+      <span class="col-60 padding-left">总金额 :<span class="assertive">￥ <strong>360.</strong><i>00</i></span></span>
+      <button ui-sref="myorder" class="col button  button-assertive"><strong>提交订单</strong></button>
     </div>
   </ion-footer-bar>
 </ion-view>
