--- a/www/css/account.css
+++ b/www/css/account.css
@@ -55,7 +55,7 @@
 
 .shoppingcart-list .row strong, .shoppingcart-list .row i {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .shoppingcart-list input[type='number'] {
@@ -249,7 +249,10 @@
   width: 10px;
   height: 5px;
 }
-
+.shoppingcart-footer-bar strong{
+  font-size: 1.2rem!important;
+  font-weight: 400;
+}
 .all-select {
   vertical-align: middle;
 }
