--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -22,8 +22,7 @@
 
           <h2>{{item.title}}</h2>
           <p class="text-wrap">{{item.description}}</p>
-          <p class="row row-center"><span class="col-60 energized">￥<strong
-            >{{item.price.split('.')[0] }}.</strong><span
+          <p class="row row-center"><span class="col-60 energized">￥<strong>{{item.price.split('.')[0] }}.</strong><span
             class="energized">{{item.price.split('.')[1]}}</span></span>
             <i class="col icon ion-ios-minus-outline grey text-right" ng-click="minus($index)"></i>
             <input type="number"  class="col text-right " ng-model="item.num"/>
@@ -43,8 +42,9 @@
         <span class="padding-left">全选</span>
 
       </label>
-      <span class="col text-center">合计 :<strong
-        class="assertive">{{shoppingcar.totalPrice |currency:'￥'}}</strong></span>
+      <span class="col text-center">合计 :<span class="assertive">
+        ￥<strong>{{shoppingcar.totalPrice.toFixed(2).toString().split('.')[0]}}.</strong>
+        <i>{{shoppingcar.totalPrice.toFixed(2).toString().split('.')[1]}}</i></span></span>
       <button ui-sref="revieworder" ng-disabled="shoppingcar.totalnum==0" class="col button  button-assertive"><strong>结算</strong> <i >( {{shoppingcar.totalnum}} )</i></button>
     </div>
   </ion-footer-bar>
