--- a/www/css/style.css
+++ b/www/css/style.css
@@ -250,3 +250,14 @@
   padding-top: 0.5rem;
   font-size: 1.5rem;
 }
+
+.platform-android .action-sheet .button {
+  text-align: center;
+  border-color: transparent;
+  font-size: 16px;
+  color: inherit; }
+.platform-android .action-sheet .action-sheet-title{
+  text-align: center;
+  font-size: 12px;
+  color: #8f8f8f;
+}
