--- a/www/templates/account/myorder.html
+++ b/www/templates/account/myorder.html
@@ -45,7 +45,7 @@
           </ion-item>
           <ion-item class="row row-horizontal-around item-borderless">
             <button class="col-20 col-offset-50 button button-positive button-outline button-small ">取消订单</button>
-            <button class="col-20  button button-positive button-outline button-small">付款</button>
+            <button class="col-20  button button-positive button-outline button-small" ng-click="modal.show()">付款</button>
           </ion-item>
         </ion-list>
         <p></p>
@@ -67,7 +67,7 @@
           </ion-item>
           <ion-item class="row row-horizontal-around item-borderless">
             <button class="col-20 col-offset-50 button button-positive button-outline button-small ">取消订单</button>
-            <button class="col-20  button button-positive button-outline button-small">付款</button>
+            <button class="col-20  button button-positive button-outline button-small" ng-click="modal.show()">付款</button>
           </ion-item>
         </ion-list>
         <!--        <ion-infinite-scroll  on-infinite="getSaleOrderList()" ng-if="sellparamstotal > sellparamspage" immediate-check="false">
@@ -94,8 +94,8 @@
             <h2 class="grey">共 1 件商品 合计: <span class="assertive"> 1800.00 元</span></h2>
           </ion-item>
           <ion-item class="row row-horizontal-around item-borderless">
-            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">取消订单</button>
-            <button class="col-20  button button-positive button-outline button-small">付款</button>
+            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">查看物流</button>
+            <button class="col-20  button button-positive button-outline button-small">确认收货</button>
           </ion-item>
         </ion-list>
         <p></p>
@@ -116,8 +116,8 @@
             <h2 class="grey">共 1 件商品 合计: <span class="assertive"> 1800.00 元</span></h2>
           </ion-item>
           <ion-item class="row row-horizontal-around item-borderless">
-            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">取消订单</button>
-            <button class="col-20  button button-positive button-outline button-small">付款</button>
+            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">查看物流</button>
+            <button class="col-20  button button-positive button-outline button-small">确认收货</button>
           </ion-item>
         </ion-list>
       </ion-content>
@@ -144,8 +144,8 @@
             <h2 class="grey">共 1 件商品 合计: <span class="assertive"> 1800.00 元</span></h2>
           </ion-item>
           <ion-item class="row row-horizontal-around item-borderless">
-            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">取消订单</button>
-            <button class="col-20  button button-positive button-outline button-small">付款</button>
+            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">查看物流</button>
+            <button class="col-20  button button-positive button-outline button-small" ui-sref="evaluate">评价</button>
           </ion-item>
         </ion-list>
       </ion-content>
