--- a/www/templates/main/revieworder.html
+++ b/www/templates/main/revieworder.html
@@ -10,8 +10,8 @@
     <ion-list>
       <a ng-href="#/addressmanage" class="item item-icon-left item-icon-right item-borderless address">
         <i class="icon ion-ios-location-outline"></i>
-        <h2>萧十一郎 <span class="padding-left">15888725383</span></h2>
-        <p class="text-wrap">广东省 深圳市 南山区 高新科技园北区 深南大道北侧 高新大道88号 腾讯大厦16层</p>
+        <h2>{{deliveryAddress.consignee}} <span class="padding-left">{{deliveryAddress.tel}}</span></h2>
+        <p class="text-wrap">{{deliveryAddress.province + deliveryAddress.city + deliveryAddress.area + deliveryAddress.address}}</p>
         <i class="icon ion-ios-arrow-right grey"></i>
       </a>
       <ion-item ng-show="false">
