--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -24,9 +24,9 @@
           <p class="text-wrap">{{item.description}}</p>
           <p class="row row-center"><span class="col-60 energized">￥<strong>{{item.price.split('.')[0] }}.</strong><span
             class="energized">{{item.price.split('.')[1]}}</span></span>
-            <i class="col icon ion-ios-minus-outline grey text-right" ng-click="minus($index)"></i>
-            <input type="number"  class="col text-right " ng-model="item.num"/>
-            <i class="col icon ion-ios-plus-outline grey text-right" ng-click="add($index)"></i></p>
+            <i class="col icon ion-ios-minus-outline positive " ng-click="minus($index)"></i>
+            <input type="number"  class="col text-center " ng-model="item.num"/>
+            <i class="col icon ion-ios-plus positive " ng-click="add($index)"></i></p>
           <label class="checkbox">
             <input type="checkbox" ng-checked="false" ng-model="item.checked">
           </label>
