--- a/www/css/account.css
+++ b/www/css/account.css
@@ -268,3 +268,20 @@
   padding-top: 0;
   padding-left: 0.5rem;
 }
+
+#evaluate .item h2 {
+  margin: 1rem 0;
+}
+
+#evaluate .item p i {
+  font-size: 1.3rem;
+}
+
+.bar-footer .button {
+  font-size: 1rem !important;
+}
+
+#evaluate .camera {
+  margin-right: 1rem;
+  font-size: 2.8rem;
+}
