--- a/www/templates/account/addaddress.html
+++ b/www/templates/account/addaddress.html
@@ -16,13 +16,13 @@
         <label class="item item-input ">
           <span class="input-label"> 手机号 </span>
           <input type="number" placeholder="请输入手机号码" check-form
-                 ng-blur="checkForm(addrinfo.tel,'手机号输入错误','mobilephone','')" ng-model="addrinfo.tel" required>
+                 ng-blur="checkForm(addrinfo.tel,'手机号输入不正确','mobilephone','')" ng-model="addrinfo.tel" required>
         </label>
 
 <!--
         <label class="item item-input ">
           <span class="input-label"> 邮箱 </span>
-          <input type="email" placeholder="请输入邮箱" check-form ng-blur="checkForm(addrinfo.email,'邮箱输入错误','email','')"
+          <input type="email" placeholder="请输入邮箱" check-form ng-blur="checkForm(addrinfo.email,'邮箱输入不正确','email','')"
                  ng-model="addrinfo.email" required>
         </label>
 -->
