--- a/www/templates/account/register.html
+++ b/www/templates/account/register.html
@@ -10,7 +10,7 @@
         <label class="item item-input padding-top">
           <span class="input-label "> 手机号 </span>
           <input type="number" placeholder="请输入手机号码" ng-model="user.mobile"
-                 check-form ng-blur="checkForm(user.mobile,'手机号输入错误','mobilephone','')"   ng-change="checkphone(user.mobile)"   ng-maxlength="11" required/>
+                 check-form ng-blur="checkForm(user.mobile,'手机号输入不正确','mobilephone','')"   ng-change="checkphone(user.mobile)"   ng-maxlength="11" required/>
         </label>
         <label class="item item-input">
           <span class="input-label "> 密码 </span>
@@ -18,7 +18,7 @@
         </label>
         <label class="item item-input">
           <span class="input-label"> 邀请码 </span>
-          <input type="number" placeholder="请输入邀请码" ng-model="user.invitationcode" />
+          <input type="number" placeholder="请输入邀请码" ng-model="user.code" />
         </label>
         <div class="item item-input">
           <span class="input-label"> 验证码 </span>
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="padding">
-        <button class="button button-positive full-image"  ng-disabled="!registerForm.$valid"  ng-click="registerSubmit()">立即注册</button>
+        <button class="button button-positive full-image"  ng-disabled="!(registerForm.$valid&&verify)"  ng-click="registerSubmit()">立即注册</button>
       </div>
     </form>
   </ion-content>
