--- a/www/templates/account/resetpassword.html
+++ b/www/templates/account/resetpassword.html
@@ -10,7 +10,7 @@
         <label class="item item-input padding-top">
           <span class="input-label "> 手机号 </span>
           <input type="number" placeholder="请输入手机号码" ng-model="user.mobile"
-                 check-form ng-blur="checkForm(user.mobile,'手机号输入错误','mobilephone','')"   ng-change="checkphone(user.mobile)"     ng-maxlength="11" required/>
+                 check-form ng-blur="checkForm(user.mobile,'手机号输入不正确','mobilephone','')"   ng-change="checkphone(user.mobile)"     ng-maxlength="11" required/>
         </label>
         <label class="item item-input">
           <span class="input-label "> 新密码 </span>
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="padding">
-        <button class="button button-positive full-image" ng-disabled="!resetpasswordForm.$valid"  ng-click="resetpasswordSubmit()">确定</button>
+        <button class="button button-positive full-image" ng-disabled="!(resetpasswordForm.$valid&&verify)"  ng-click="resetpasswordSubmit()">确定</button>
 
       </div>
     </form>
