--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,16 +1,17 @@
 <ion-view hide-nav-bar="true">
   <ion-content overflow-scroll="false" class="stable-bg no-nav-header" id="userlogin">
     <div class="row row-horizontal-around row-top  light account-top-bg">
-        <i class="col icon ion-ios-arrow-left"  nav-direction=back native-ui-sref="tab.main"
-           native-options="{type: 'slide',direction: 'right'}"></i>
+      <i class="col icon ion-ios-arrow-left" nav-direction=back native-ui-sref="tab.main"
+         native-options="{type: 'slide',direction: 'right'}"></i>
       <strong class="col-70 text-center"> 登录</strong>
-      <a class="col  light text-center subdued"  ng-href="#/register" nav-direction=forward>注册</a>
+      <a class="col  light text-center subdued" ng-href="#/register" nav-direction=forward>注册</a>
     </div>
     <form name="loginForm">
       <div class="list">
         <label class="item item-input padding-top">
           <span class="input-label icon ion-android-phone-portrait"> 手机号 </span>
-          <input type="number"  placeholder="请输入手机号码" ng-model="user.mobile"  check-form ng-blur="checkForm(user.mobile,'手机号输入错误','mobilephone','')"
+          <input type="number" placeholder="请输入手机号码" ng-model="user.mobile" check-form
+                 ng-blur="checkForm(user.mobile,'手机号输入不正确','mobilephone','')"
                  ng-maxlength="11" required/>
         </label>
 
@@ -20,10 +21,14 @@
         </label>
       </div>
       <div class="padding">
-        <button class="button button-positive full-image" ng-disabled="!loginForm.$valid"  ng-click="loginSubmit()">登录</button>
+        <button class="button button-positive full-image" ng-disabled="!(loginForm.$valid&&verify)"
+                ng-click="loginSubmit()">登录
+        </button>
 
       </div>
-      <p class="text-right padding"><a ng-href="#/resetpassword" class="subdued positive" nav-direction=forward class="positive">忘记密码?</a></p>
+      <p class="text-right padding">
+        <a ng-href="#/resetpassword" class="subdued positive" nav-direction=forward class="positive">忘记密码?</a>
+      </p>
     </form>
   </ion-content>
 
