--- a/www/templates/account/contactus.html
+++ b/www/templates/account/contactus.html
@@ -9,11 +9,11 @@
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true">
     <ion-list class="list-borderless">
       <ion-item>
-        <h2>客服电话 : <a class="subdued grey padding-left" href="tel:{{info.hotlink}}">{{info.hotlink}}</a></h2>
+        <h2 class="row"><span class="col-25">客服电话 </span> <a class="subdued grey padding-left" href="tel:{{info.hotlink}}">{{info.hotlink}}</a></h2>
       </ion-item>
       <p></p>
       <ion-item>
-        <h2>客服  QQ : <a class="subdued grey padding-left" > {{info.qq}}</a></h2>
+        <h2 class="row"><span class="col-25">客服  QQ </span> <a class="subdued grey padding-left" > {{info.qq}}</a></h2>
       </ion-item>
     </ion-list>
   </ion-content>
