--- a/www/templates/account/uploadhead.html
+++ b/www/templates/account/uploadhead.html
@@ -10,7 +10,7 @@
     <button class="button button-clear icon ion-ios-more grey" ng-click="uploadActionSheet()"></button>
   </ion-nav-buttons>
     <ion-content overflow-scroll="false" class="stable-bg ">
-      <img ng-src="img/head.jpg"  class="full-image" onerror="this.src='img/head.jpg'"/>
+      <img ng-src="{{headurl}}"  class="full-image" />
     </ion-content>
 
 </ion-view>
