--- a/www/templates/account/organizingdata.html
+++ b/www/templates/account/organizingdata.html
@@ -10,7 +10,7 @@
     <form name="organizingdata">
       <ion-list>
         <a ui-sref="uploadhead({figure:userinfo.figure})" class="item item-avatar item-icon-right  item-borderless">
-          <img ng-src="img/head.jpg" class="border-radius-50" alt="" onerror="this.src='img/head.jpg'">
+          <img ng-src="{{userinfo.head_img}}" class="border-radius-50" alt="">
           <p class="padding-top">头像</p>
           <i class="icon ion-ios-arrow-right grey"></i>
         </a>
@@ -41,7 +41,7 @@
         </label>
         <label class="item item-input ">
           <span class="input-label"> 详细地址 </span>
-          <textarea class="col-60" rows="1" ng-model="userinfo.address" placeholder="请输入详细地址" required></textarea>
+          <textarea class="col-60" rows="1" ng-model="userinfo.address" placeholder="请输入详细地址"></textarea>
         </label>
 
         <label class="item item-input ">
